fixed layout of frontend and improved code readability

--- a/backend/videostriiming/src/main/resources/static/css/kurento.css
+++ b/backend/videostriiming/src/main/resources/static/css/kurento.css
@@ -21,9 +21,6 @@ html {
 	min-height: 100%;
 }
 
-body {
-	padding-top: 40px;
-}
 
 video, #console {
 	display: block;
